src/grammar/DictioParser.js
// Generated from ./src/grammar/Dictio.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import DictioVisitor from './DictioVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class DictioParser extends antlr4.Parser {

    static grammarFileName = "Dictio.g4";
    static literalNames = [ null, null, "'lets'", "'run'", "'comp'", "'imp'", 
                            "'si'", "'sino'", "'*'", "'/'", "'-'", "'+'", 
                            "'='", "'{'", "'}'", "'.'", null, null, "'('", 
                            "')'", "';'", "','", "'\"'", "'>'", "'<'", "'=='", 
                            "'!='" ];
    static symbolicNames = [ null, "WS", "LETS", "RUN", "COMP", "IMP", "IF", 
                             "ELSE", "ASTE", "DIA", "RES", "SUM", "EQU", 
                             "LLAVEA", "LLAVEC", "DOT", "ID", "INT", "PARA", 
                             "PARC", "SC", "COMA", "COMID", "MAYORQUE", 
                             "MENORQUE", "IGUAL", "DIFERENTE", "TEXTO" ];
    static ruleNames = [ "main", "content", "condif", "siono", "deotro", 
                         "imprime", "declara", "asigna", "expr", "textobteiner" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DictioParser.ruleNames;
        this.literalNames = DictioParser.literalNames;
        this.symbolicNames = DictioParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 8:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		case 1:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	main() {
	    let localctx = new MainContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DictioParser.RULE_main);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 20;
	        this.match(DictioParser.LETS);
	        this.state = 21;
	        this.match(DictioParser.RUN);
	        this.state = 22;
	        this.match(DictioParser.LLAVEA);
	        this.state = 24;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 65648) !== 0)) {
	            this.state = 23;
	            this.content();
	        }

	        this.state = 26;
	        this.match(DictioParser.LLAVEC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	content() {
	    let localctx = new ContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DictioParser.RULE_content);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 32; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 32;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 6:
	                this.state = 28;
	                this.condif();
	                break;
	            case 5:
	                this.state = 29;
	                this.imprime();
	                break;
	            case 4:
	                this.state = 30;
	                this.declara();
	                break;
	            case 16:
	                this.state = 31;
	                this.asigna();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 34; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 65648) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condif() {
	    let localctx = new CondifContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DictioParser.RULE_condif);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.match(DictioParser.IF);
	        this.state = 37;
	        this.match(DictioParser.PARA);
	        this.state = 38;
	        this.siono();
	        this.state = 39;
	        this.match(DictioParser.PARC);
	        this.state = 40;
	        this.match(DictioParser.LLAVEA);
	        this.state = 41;
	        this.content();
	        this.state = 42;
	        this.match(DictioParser.LLAVEC);
	        this.state = 44;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 43;
	            this.deotro();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	siono() {
	    let localctx = new SionoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DictioParser.RULE_siono);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.expr(0);
	        this.state = 47;
	        localctx.op = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 125829120) !== 0))) {
	            localctx.op = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 48;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deotro() {
	    let localctx = new DeotroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DictioParser.RULE_deotro);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        this.match(DictioParser.ELSE);
	        this.state = 51;
	        this.match(DictioParser.LLAVEA);
	        this.state = 52;
	        this.content();
	        this.state = 53;
	        this.match(DictioParser.LLAVEC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	imprime() {
	    let localctx = new ImprimeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DictioParser.RULE_imprime);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this.match(DictioParser.IMP);
	        this.state = 56;
	        this.match(DictioParser.PARA);
	        this.state = 57;
	        this.textobteiner();
	        this.state = 60;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 58;
	            this.match(DictioParser.COMA);
	            this.state = 59;
	            this.expr(0);
	        }

	        this.state = 62;
	        this.match(DictioParser.PARC);
	        this.state = 63;
	        this.match(DictioParser.SC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declara() {
	    let localctx = new DeclaraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DictioParser.RULE_declara);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(DictioParser.COMP);
	        this.state = 66;
	        this.match(DictioParser.ID);
	        this.state = 69;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===12) {
	            this.state = 67;
	            this.match(DictioParser.EQU);
	            this.state = 68;
	            this.expr(0);
	        }

	        this.state = 71;
	        this.match(DictioParser.SC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	asigna() {
	    let localctx = new AsignaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, DictioParser.RULE_asigna);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(DictioParser.ID);
	        this.state = 74;
	        this.match(DictioParser.EQU);
	        this.state = 75;
	        this.expr(0);
	        this.state = 76;
	        this.match(DictioParser.SC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 16;
	    this.enterRecursionRule(localctx, 16, DictioParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	        case 17:
	            localctx = new IntContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 80;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===10) {
	                this.state = 79;
	                this.match(DictioParser.RES);
	            }

	            this.state = 82;
	            this.match(DictioParser.INT);
	            break;
	        case 18:
	            localctx = new ParensContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 83;
	            this.match(DictioParser.PARA);
	            this.state = 84;
	            this.expr(0);
	            this.state = 85;
	            this.match(DictioParser.PARC);
	            break;
	        case 16:
	            localctx = new IdContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 87;
	            this.match(DictioParser.ID);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 98;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 96;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new MulDivContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DictioParser.RULE_expr);
	                    this.state = 90;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 91;
	                    localctx.operation = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===8 || _la===9)) {
	                        localctx.operation = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 92;
	                    this.expr(6);
	                    break;

	                case 2:
	                    localctx = new AddsubContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, DictioParser.RULE_expr);
	                    this.state = 93;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 94;
	                    localctx.operation = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===10 || _la===11)) {
	                        localctx.operation = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 95;
	                    this.expr(5);
	                    break;

	                } 
	            }
	            this.state = 100;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	textobteiner() {
	    let localctx = new TextobteinerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, DictioParser.RULE_textobteiner);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(DictioParser.TEXTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

DictioParser.EOF = antlr4.Token.EOF;
DictioParser.WS = 1;
DictioParser.LETS = 2;
DictioParser.RUN = 3;
DictioParser.COMP = 4;
DictioParser.IMP = 5;
DictioParser.IF = 6;
DictioParser.ELSE = 7;
DictioParser.ASTE = 8;
DictioParser.DIA = 9;
DictioParser.RES = 10;
DictioParser.SUM = 11;
DictioParser.EQU = 12;
DictioParser.LLAVEA = 13;
DictioParser.LLAVEC = 14;
DictioParser.DOT = 15;
DictioParser.ID = 16;
DictioParser.INT = 17;
DictioParser.PARA = 18;
DictioParser.PARC = 19;
DictioParser.SC = 20;
DictioParser.COMA = 21;
DictioParser.COMID = 22;
DictioParser.MAYORQUE = 23;
DictioParser.MENORQUE = 24;
DictioParser.IGUAL = 25;
DictioParser.DIFERENTE = 26;
DictioParser.TEXTO = 27;

DictioParser.RULE_main = 0;
DictioParser.RULE_content = 1;
DictioParser.RULE_condif = 2;
DictioParser.RULE_siono = 3;
DictioParser.RULE_deotro = 4;
DictioParser.RULE_imprime = 5;
DictioParser.RULE_declara = 6;
DictioParser.RULE_asigna = 7;
DictioParser.RULE_expr = 8;
DictioParser.RULE_textobteiner = 9;

class MainContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_main;
    }

	LETS() {
	    return this.getToken(DictioParser.LETS, 0);
	};

	RUN() {
	    return this.getToken(DictioParser.RUN, 0);
	};

	LLAVEA() {
	    return this.getToken(DictioParser.LLAVEA, 0);
	};

	LLAVEC() {
	    return this.getToken(DictioParser.LLAVEC, 0);
	};

	content() {
	    return this.getTypedRuleContext(ContentContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitMain(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ContentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_content;
    }

	condif = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CondifContext);
	    } else {
	        return this.getTypedRuleContext(CondifContext,i);
	    }
	};

	imprime = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ImprimeContext);
	    } else {
	        return this.getTypedRuleContext(ImprimeContext,i);
	    }
	};

	declara = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclaraContext);
	    } else {
	        return this.getTypedRuleContext(DeclaraContext,i);
	    }
	};

	asigna = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AsignaContext);
	    } else {
	        return this.getTypedRuleContext(AsignaContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitContent(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CondifContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_condif;
    }

	IF() {
	    return this.getToken(DictioParser.IF, 0);
	};

	PARA() {
	    return this.getToken(DictioParser.PARA, 0);
	};

	siono() {
	    return this.getTypedRuleContext(SionoContext,0);
	};

	PARC() {
	    return this.getToken(DictioParser.PARC, 0);
	};

	LLAVEA() {
	    return this.getToken(DictioParser.LLAVEA, 0);
	};

	content() {
	    return this.getTypedRuleContext(ContentContext,0);
	};

	LLAVEC() {
	    return this.getToken(DictioParser.LLAVEC, 0);
	};

	deotro() {
	    return this.getTypedRuleContext(DeotroContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitCondif(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SionoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_siono;
        this.op = null;
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	MAYORQUE() {
	    return this.getToken(DictioParser.MAYORQUE, 0);
	};

	MENORQUE() {
	    return this.getToken(DictioParser.MENORQUE, 0);
	};

	IGUAL() {
	    return this.getToken(DictioParser.IGUAL, 0);
	};

	DIFERENTE() {
	    return this.getToken(DictioParser.DIFERENTE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitSiono(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeotroContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_deotro;
    }

	ELSE() {
	    return this.getToken(DictioParser.ELSE, 0);
	};

	LLAVEA() {
	    return this.getToken(DictioParser.LLAVEA, 0);
	};

	content() {
	    return this.getTypedRuleContext(ContentContext,0);
	};

	LLAVEC() {
	    return this.getToken(DictioParser.LLAVEC, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitDeotro(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ImprimeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_imprime;
    }

	IMP() {
	    return this.getToken(DictioParser.IMP, 0);
	};

	PARA() {
	    return this.getToken(DictioParser.PARA, 0);
	};

	textobteiner() {
	    return this.getTypedRuleContext(TextobteinerContext,0);
	};

	PARC() {
	    return this.getToken(DictioParser.PARC, 0);
	};

	SC() {
	    return this.getToken(DictioParser.SC, 0);
	};

	COMA() {
	    return this.getToken(DictioParser.COMA, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitImprime(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeclaraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_declara;
    }

	COMP() {
	    return this.getToken(DictioParser.COMP, 0);
	};

	ID() {
	    return this.getToken(DictioParser.ID, 0);
	};

	SC() {
	    return this.getToken(DictioParser.SC, 0);
	};

	EQU() {
	    return this.getToken(DictioParser.EQU, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitDeclara(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AsignaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_asigna;
    }

	ID() {
	    return this.getToken(DictioParser.ID, 0);
	};

	EQU() {
	    return this.getToken(DictioParser.EQU, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	SC() {
	    return this.getToken(DictioParser.SC, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitAsigna(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ExprContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_expr;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class ParensContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	PARA() {
	    return this.getToken(DictioParser.PARA, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	PARC() {
	    return this.getToken(DictioParser.PARC, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitParens(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

DictioParser.ParensContext = ParensContext;

class AddsubContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.operation = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	SUM() {
	    return this.getToken(DictioParser.SUM, 0);
	};

	RES() {
	    return this.getToken(DictioParser.RES, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitAddsub(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

DictioParser.AddsubContext = AddsubContext;

class MulDivContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.operation = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};

	ASTE() {
	    return this.getToken(DictioParser.ASTE, 0);
	};

	DIA() {
	    return this.getToken(DictioParser.DIA, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitMulDiv(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

DictioParser.MulDivContext = MulDivContext;

class IdContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	ID() {
	    return this.getToken(DictioParser.ID, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitId(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

DictioParser.IdContext = IdContext;

class IntContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	INT() {
	    return this.getToken(DictioParser.INT, 0);
	};

	RES() {
	    return this.getToken(DictioParser.RES, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitInt(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}

DictioParser.IntContext = IntContext;

class TextobteinerContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DictioParser.RULE_textobteiner;
    }

	TEXTO() {
	    return this.getToken(DictioParser.TEXTO, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof DictioVisitor ) {
	        return visitor.visitTextobteiner(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




DictioParser.MainContext = MainContext; 
DictioParser.ContentContext = ContentContext; 
DictioParser.CondifContext = CondifContext; 
DictioParser.SionoContext = SionoContext; 
DictioParser.DeotroContext = DeotroContext; 
DictioParser.ImprimeContext = ImprimeContext; 
DictioParser.DeclaraContext = DeclaraContext; 
DictioParser.AsignaContext = AsignaContext; 
DictioParser.ExprContext = ExprContext; 
DictioParser.TextobteinerContext = TextobteinerContext; 
